# satcam

./: .gitattributes  .gitignore  AccuracyDiscussion.m  Apr11.py  PlotIridiumTLE.py  README.md  README.rst  RunIridium91Apr11.m  RunSatCrossTime.m  extractmaskedvals.m  findClosestAzel.m  fov2eci.py  gettle.m  iridium.py  pixelcrossing.m  requirements.txt  satazel.m  setup.cfg  setup.py  timeDMCreader.m  tle2azel.m  verifySatLocvsTime.m
SGP4/: LICENSE  ReadTextFiles.m  RunSGP4.m  angl.m  dpper.m  findIntercept.m  gstime.m  satGEOM.m  sgp4.m  spg4_ecf.m  twoline2rvMOD.m
satcam/: __init__.py  io.py  plots.py
