[metadata]
name = satcam
version = 0.8.0
author = Michael Hirsch, Ph.D.
url = https://github.com/scivision/satcam
description = intersection of camera FOV and satellite passes
keywords =
  conjunction
  data fusion
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
install_requires =
  numpy
  ephem
  astropy
  netCDF4
  matplotlib
  python-dateutil
  pytz
  histutils


[options.extras_require]
tests =
  pytest
lint =
  flake8
  mypy
